# RMP

coreServer/: CMakeLists.txt
coreServer/include/: infoserver.hpp  infoservice.hpp  rserver.hpp
coreServer/include/db/: db.hpp
coreServer/include/model/: packagesmodel.hpp  robotinfo.hpp  robotinfomodel.hpp  robotlist.hpp  robotlistmodel.hpp  user.hpp  usermodel.hpp
coreServer/src/: CMakeLists.txt  infoserver.cpp  infoservice.cpp  main.cpp  rserver.cpp
coreServer/src/db/: db.cpp
coreServer/src/model/: packagesmodel.cpp  robotinfomodel.cpp  robotlistmodel.cpp  usermodel.cpp
robotClient/: CMakeLists.txt  autostart.sh
robotClient/include/: logger.hpp  robotclient.hpp  robotservice.hpp
robotClient/src/: CMakeLists.txt  main.cpp  robotclient.cpp  robotservice.cpp
rwebsite/: package.json
rwebsite/public/: index.html
rwebsite/src/: App.js
rwebsite/src/components/: DashBoard.js  Login.js  RobotContent.js  RobotDetailDrawer.js  txt
rwebsite/src/styles/: DashBoard.css
